# MobileGlues

./: .gitignore  README.md  build.gradle
.github/workflows/: build.yml
src/main/cpp/: CMakeLists.txt  includes.h  main.cpp  version.h
src/main/cpp/config/: gpu_utils.cpp  settings.cpp  settings.h
src/main/cpp/egl/: egl.cpp
src/main/cpp/gl/: buffer.cpp  buffer.h  drawing.cpp  drawing.h  framebuffer.cpp  framebuffer.h  getter.cpp  gl.cpp  gl_native.cpp  gl_stub.cpp  log.cpp  log.h  mg.cpp  mg.h  multidraw.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexattrib.cpp
src/main/cpp/gl/FSR1/: FSR1.h
src/main/cpp/gl/gl4es/: config.h
src/main/cpp/gl/gl4es/egl/: egl.c
src/main/cpp/gl/gl4es/gl/: arbconverter.c  arbhelper.c  arbparser.c  array.c  attributes.h  blend.c  blit.c  buffers.c  buffers.h  build_info.c  debug.c  depth.c  directstate.c  drawing.c  enable.c  enum_info.h  envvars.c  envvars.h  eval.c  face.c  fog.c  fpe.c  fpe_cache.c  fpe_shader.c  framebuffers.c  framebuffers.h  getter.c  gl4es.c  gl4es.h  gl_lookup.c  gl_lookup.h  glstate.c  glstate.h  hint.c  hint.h  init.c  light.c  line.c  list.c  listdraw.c  (+35 more)
src/main/cpp/gl/gl4es/gl/vgpu/: shaderconv.c  shaderconv.h
src/main/cpp/gl/gl4es/gl/wrap/: gl4eswraps.c  gles.c  gles.h  glstub.c
src/main/cpp/gl/gl4es/glx/: gbm.c  glx.c  glx.h  glx_stubs.c  hardext.c  lookup.c  rpi.c  streaming.c
src/main/cpp/gl/glsl/: glsl_for_es.cpp  glsl_for_es.h  glslconv_gl4es.cpp  glslconv_gl4es.h  khash.h
src/main/cpp/gles/: gles.h  loader.cpp  loader.h
src/main/cpp/glx/: lookup.cpp  lookup.h
src/main/cpp/include/: gl4esinit.h
src/main/cpp/libraries/linux_amd64/: libspirv-cross-c-shared.so.0
